-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 15
-
Component/s: client-libs
-
b13
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246063 | 13.0.4 | Philip Race | P3 | Resolved | Fixed | b03 |
| JDK-8243096 | 11.0.8-oracle | Philip Race | P3 | Resolved | Fixed | b04 |
| JDK-8242633 | 11.0.8 | Philip Race | P3 | Resolved | Fixed | b01 |
When using LCD text on Linux and specificying fractional metrics
sometimes there are artifacts down the right hand edge.
It seems very rare - and I've only been able to reproduce it
with one version of Deja Vu Sans.
At first I thought it was the cause of the reported
https://bugs.openjdk.java.net/browse/JDK-8214284
but this issue is specific to LCD and fractional metrics since there we use
sub-pixel positioning.
sometimes there are artifacts down the right hand edge.
It seems very rare - and I've only been able to reproduce it
with one version of Deja Vu Sans.
At first I thought it was the cause of the reported
https://bugs.openjdk.java.net/browse/JDK-8214284
but this issue is specific to LCD and fractional metrics since there we use
sub-pixel positioning.
- backported by
-
JDK-8242633 Rendering artifacts with LCD text and fractional metrics
-
- Resolved
-
-
JDK-8243096 Rendering artifacts with LCD text and fractional metrics
-
- Resolved
-
-
JDK-8246063 Rendering artifacts with LCD text and fractional metrics
-
- Resolved
-