8238942: Rendering artifacts with LCD text and fractional metrics

Reviewed-by: serb, jdv